# atomic_fn

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: impls.rs  lib.rs
